Closed
Bug 1393347
Opened 8 years ago
Closed 8 years ago
mips spew
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox57 | --- | fixed |
People
(Reporter: yuyin-hf, Assigned: yuyin-hf)
Details
Attachments
(1 file)
|
63.80 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/603.2.4 (KHTML, like Gecko) Version/10.1.1 Safari/603.2.4
Steps to reproduce:
when we debug jit-code, we can set IONFLAGS=codegen, and then in debug mode, we can get instructions information along with LIR on x86 platform, like:
[Codegen] instruction StackArgT
[Codegen] movabsq $0xfff90000, %r11
[Codegen] movq %r11, 0x0(%rsp)
but on mips platform, we can only get:
[Codegen] instruction StackArgT
Actual results:
no informations about what real instructions use.
Expected results:
instruction information along with LIR like x86.
Component: Untriaged → JavaScript Engine: JIT
Product: Firefox → Core
Attachment #8900598 -
Flags: review?(luke)
Attachment #8900598 -
Flags: review?(r)
Updated•8 years ago
|
Attachment #8900598 -
Flags: review?(luke) → review+
Comment 2•8 years ago
|
||
Comment on attachment 8900598 [details] [diff] [review]
0001-MIPS-Output-some-more-infomation-when-debug-jit-code.patch
Review of attachment 8900598 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jit/mips-shared/Assembler-mips-shared.cpp
@@ +1377,4 @@
> BufferOffset
> AssemblerMIPSShared::as_ceilws(FloatRegister fd, FloatRegister fs)
> {
> + spew("ceil.w.s%3s,%3s", fd.name(), fs.name());
no space.
::: js/src/jit/mips-shared/MacroAssembler-mips-shared.cpp
@@ +1579,4 @@
> as_bal(BOffImm16(3 * sizeof(uint32_t)));
> addPtr(Imm32(5 * sizeof(uint32_t)), ra);
> // Allocate space which will be patched by patchCall().
> + spew(".space 32bit initValue 0xffff ffff");
.word 0xffffffff
Attachment #8900598 -
Flags: review?(r)
ceil.w.s f0, f1.
%3s
(In reply to Heiher [:hev] from comment #2)
> Comment on attachment 8900598 [details] [diff] [review]
> 0001-MIPS-Output-some-more-infomation-when-debug-jit-code.patch
>
> Review of attachment 8900598 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> ::: js/src/jit/mips-shared/Assembler-mips-shared.cpp
> @@ +1377,4 @@
> > BufferOffset
> > AssemblerMIPSShared::as_ceilws(FloatRegister fd, FloatRegister fs)
> > {
> > + spew("ceil.w.s%3s,%3s", fd.name(), fs.name());
>
> no space.
>
> ::: js/src/jit/mips-shared/MacroAssembler-mips-shared.cpp
> @@ +1579,4 @@
> > as_bal(BOffImm16(3 * sizeof(uint32_t)));
> > addPtr(Imm32(5 * sizeof(uint32_t)), ra);
> > // Allocate space which will be patched by patchCall().
> > + spew(".space 32bit initValue 0xffff ffff");
>
> .word 0xffffffff
Keywords: checkin-needed
Updated•8 years ago
|
Assignee: nobody → yuyin-hf
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2c395a5be25d
MIPS: Output some more infomation when debug jit code. r=luke
Keywords: checkin-needed
Comment 5•8 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in
before you can comment on or make changes to this bug.
Description
•