Bug 1393347 - MIPS: Output some more infomation when debug jit code. r=luke